# d2wc

./: .gitignore  LICENSE  README.md  d2wc-installation.sh  d2wc-prepare-archive.sh  install-qubes.sh  pyproject.toml
docs/: backup-archives.md  connector-write-probe.txt  development-status.md  devilspie2-window-probe.md  event-data-ui-direction.md  event-monitoring.md  implementation-plan.md  installation.md  left-edge-correction-testing.md  lua-configurables.md  mvp-scope.md  packaging.md  product-development-brief.md  qubes-dom0-installation.md  repository-layout.md  runtime-architecture.md  technology-evaluation.md  testing.md  ui-flow.md  user-installation-documentation-notes.md
src/: d2wc-1080.lua  d2wc-new.lua  d2wc.lua
tests/: test_active_window.py  test_backup.py  test_cli.py  test_cli_left_edge.py  test_cli_routes.py  test_cli_target_rules.py  test_duplicate_validation.py  test_event_data.py  test_event_gtk_app.py  test_event_inventory.py  test_event_inventory_capture.py  test_event_preview.py  test_geom_operations.py  test_gtk_app.py  test_left_edge_operations.py  test_lua_blocks.py  test_main_entrypoint.py  test_managed_config_file.py  test_managed_config_rendering.py  test_managed_grid_rows.py  test_placement_cli.py  test_placement_operations.py  test_rendering.py  test_route_operations.py  test_rule_grammar.py  test_saving.py  test_section_validation.py  test_shadow_validation.py  test_split_profiles.py  test_target_rule_operations.py  test_test_config.py  test_test_config_actions.py  test_transient_apply.py  test_user_paths.py  test_validation_report.py
(+69 files in other folders)
