[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "d2wc"
version = "0.1.0"
description = "Devilspie2 Workspace Configurator"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "berge-is-bome" }
]
keywords = ["devilspie2", "linux", "window-management", "workspace"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: X11 Applications",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Desktop Environment :: Window Managers",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[project.scripts]
d2wc = "d2wc.__main__:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["d2wc*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
